--- a/.htaccess
+++ b/.htaccess
@@ -5,6 +5,6 @@
    RewriteCond %{REQUEST_FILENAME} !-f
    RewriteCond %{REQUEST_FILENAME} !-d
    RewriteCond %{REQUEST_FILENAME} !-l
-   RewriteRule ^([a-zA-Z0-9_-]+)$ redirect.php?alias=$1 [L]
+   RewriteRule ^([a-zA-Z0-9_-]+)$ go.php?alias=$1 [L]
 </IfModule>
 
