--- a/.htaccess
+++ b/.htaccess
@@ -1,10 +1,1 @@
-<IfModule mod_rewrite.c>
-   RewriteEngine on
-   RewriteOptions MaxRedirects=1
-   RewriteBase /
-   RewriteCond %{REQUEST_FILENAME} !-f
-   RewriteCond %{REQUEST_FILENAME} !-d
-   RewriteCond %{REQUEST_FILENAME} !-l
-   RewriteRule ^([a-zA-Z0-9_-]+)$ go.php?alias=$1 [L]
-</IfModule>
-
+ErrorDocument 404 /redirect.php
